@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Jun 2010; Froxlor Release Team <release@froxlor.org>
+  froxlor-0.9.8.ebuild, froxlor-9999.ebuild:
+  added USE-flag ftpquota to enable/disable quota in proftpd
+
   09 Jun 2010; Froxlor Release Team <release@froxlor.org>
   froxlor-0.9.8.ebuild, froxlor-9999.ebuild:
   some fixes in pkg_config phase
